force-app/main/default/objects/CMIT07_Legacy_Systems__mdt/CMIT07_Legacy_Systems__mdt.object-meta.xml
<CustomObject>
    <label>Legacy System</label>
    <pluralLabel>Legacy Systems</pluralLabel>
</CustomObject>