force-app/main/default/objects/CMIT07_Legacy_Systems__mdt/fields/IT_Apex__c.field-meta.xml
<CustomField>
    <fullName>IT_Apex__c</fullName>
    <label>Apex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>