force-app/main/default/objects/CMIT07_Legacy_Systems__mdt/fields/IT_CTI__c.field-meta.xml
<CustomField>
    <fullName>IT_CTI__c</fullName>
    <label>CTI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>