force-app/main/default/objects/CMIT07_Legacy_Systems__mdt/fields/IT_GestCred__c.field-meta.xml
<CustomField>
    <fullName>IT_GestCred__c</fullName>
    <label>GestCred</label>
    <length>255</length>
    <type>Text</type>
</CustomField>