force-app/main/default/objects/CMIT07_Legacy_Systems__mdt/fields/IT_JIRACreate__c.field-meta.xml
<CustomField>
    <fullName>IT_JIRACreate__c</fullName>
    <label>JIRACreate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>