force-app/main/default/objects/CMIT07_Legacy_Systems__mdt/fields/IT_JIRAIssue__c.field-meta.xml
<CustomField>
    <fullName>IT_JIRAIssue__c</fullName>
    <label>JIRAIssue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>