force-app/main/default/objects/CMIT07_Legacy_Systems__mdt/fields/IT_Kiwi__c.field-meta.xml
<CustomField>
    <fullName>IT_Kiwi__c</fullName>
    <label>Kiwi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>