force-app/main/default/objects/CMIT07_Legacy_Systems__mdt/fields/IT_MYDHL__c.field-meta.xml
<CustomField>
    <fullName>IT_MYDHL__c</fullName>
    <label>MYDHL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>