force-app/main/default/objects/CMIT07_Legacy_Systems__mdt/fields/IT_MYTNT__c.field-meta.xml
<CustomField>
    <fullName>IT_MYTNT__c</fullName>
    <label>MYTNT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>