force-app/main/default/objects/CMIT07_Legacy_Systems__mdt/fields/IT_Operations__c.field-meta.xml
<CustomField>
    <fullName>IT_Operations__c</fullName>
    <label>Operations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>