force-app/main/default/objects/CMIT07_Legacy_Systems__mdt/fields/IT_PortaleBeneficiari__c.field-meta.xml
<CustomField>
    <fullName>IT_PortaleBeneficiari__c</fullName>
    <label>PortaleBeneficiari</label>
    <length>255</length>
    <type>Text</type>
</CustomField>