force-app/main/default/objects/CMIT07_Legacy_Systems__mdt/fields/IT_PortaleIntesa__c.field-meta.xml
<CustomField>
    <fullName>IT_PortaleIntesa__c</fullName>
    <label>PortaleIntesa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>