force-app/main/default/objects/CMIT07_Legacy_Systems__mdt/fields/IT_PortaliClienti__c.field-meta.xml
<CustomField>
    <fullName>IT_PortaliClienti__c</fullName>
    <label>PortaliClienti</label>
    <length>255</length>
    <type>Text</type>
</CustomField>