force-app/main/default/objects/CMIT07_Legacy_Systems__mdt/fields/IT_SgopSgoc__c.field-meta.xml
<CustomField>
    <fullName>IT_SgopSgoc__c</fullName>
    <label>SgopSgoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>