force-app/main/default/objects/CMIT07_Legacy_Systems__mdt/fields/IT_SsoBridge__c.field-meta.xml
<CustomField>
    <fullName>IT_SsoBridge__c</fullName>
    <label>SsoBridge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>